--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="hRxjonEjXPkao5SWGh673Fob5db754uWnma-_BFUx4E" />
     <meta name="ahrefs-site-verification" content="7f70acb79c94ab5379f043a57de62e690fad55c0c379351cf9a0de844704cf00">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6697699008241413"
      crossorigin="anonymous"></script>
